[project]
name = "digital-badges-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Wilton", email = "daniel.wilton.dw@outlook.com"},
]
dependencies = [
    "fastapi[standard]>=0.112.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
plugins = [
    "sync-pre-commit-lock"
]

[tool.pdm.scripts]
dev-server = "fastapi dev ./src/digital_badges_api/main.py"

[tool.pdm.dev-dependencies]
dev = [
    "commitizen>=3.29.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.sync-pre-commit-lock]
# Run `pre-commit install` automatically
automatically-install-hooks = true
disable-sync-from-lock = false
pre-commit-config-file = ".pre-commit-config.yaml"
